Fixed small error on mobile version

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a{
   opacity: 0%;
   transition: opacity 1s;
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 46px;
 }
 #main-detector.fade-in-main-detector{
   opacity: 100%;
